Cleanup some mistakes in inital

--- a/lib/CMakeConfig.hpp.in
+++ b/lib/CMakeConfig.hpp.in
@@ -1,2 +1,2 @@
-#define myOpenGL_VERSION_MAJOR @myOpenGL_VERSION_MAJOR@
-#define myOpenGL_VERSION_MINOR @myOpenGL_VERSION_MINOR@
+#define PROJECT_VERSION_MAJOR @PROJECT_VERSION_MAJOR@
+#define PROJECT_VERSION_MINOR @PROJECT_VERSION_MINOR@
